--- a/.gitignore
+++ b/.gitignore
@@ -73,8 +73,8 @@ resources/
 
 # eclipse specific git ignore
 *.pydevproject
-.project
-.metadata
+#.project
+#.metadata
 bin/**
 tmp/**
 tmp/**/*
@@ -83,8 +83,8 @@ tmp/**/*
 *.swp
 *~.nib
 local.properties
-.classpath
-.settings/
+#.classpath
+#.settings/
 .loadpath
 
 # External tool builders
